--- a/CSS/01_Basics/style.css
+++ b/CSS/01_Basics/style.css
@@ -1,10 +1,14 @@
 div {
     background-color: red;
     height: 100px;
-    width: 100px;
     border-style: solid;
+    border-width: 2px;
+    margin: 2px;
     box-sizing: border-box;
 }
+.first {
+    width: 50%;
+}
 .second {
-    padding-left: 15px;
+    width: 50vw;
 }
