--- a/JS_Extended/A06_Football_RestAPI/style.css
+++ b/JS_Extended/A06_Football_RestAPI/style.css
@@ -2,6 +2,12 @@ body {
     background-image: linear-gradient(rgb(235, 40, 34), yellow);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.titleDiv {
+    display: flex;
+    justify-content: center;
+    top: 0;
+    position:sticky;
+}
 .title {
     text-align: center;
     color: rgb(255, 255, 255);
@@ -18,4 +24,11 @@ li {
     border-color: black;
     border-style: solid;
     margin: 2px;
+    padding: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    list-style: none;
+}
+li:hover {
+    color: rgb(255, 255, 255);
 }
